--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   }
   
   *{
+    transition: .5s .1s  all  ease;
     position: relative;
     font-family: system-ui;
     box-sizing: border-box;
@@ -23,6 +24,17 @@ body {
   
 #result{
   transform: translateY(20px);
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  margin: 40px auto;
+  background-color: #e0f6ff;
+  width: 60%;
+  border: 1px #0000000f solid;
+  border-radius: 16px;
+  box-shadow: 0px 0px 11px 1px #63e390b8;
+
 }
 
 body {
